--- a/my-project/package.json
+++ b/my-project/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react3",
+  "name": "my-project",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,13 +10,6 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@emotion/css": "^11.11.2",
-    "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.0",
-    "@mui/icons-material": "^5.15.11",
-    "@mui/material": "^5.15.11",
-    "@popperjs/core": "^2.11.8",
-    "bootstrap": "^5.3.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
@@ -24,22 +17,10 @@
     "@types/react": "^18.2.56",
     "@types/react-dom": "^18.2.19",
     "@vitejs/plugin-react": "^4.2.1",
-    "autoprefixer": "^10.4.18",
     "eslint": "^8.56.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
-    "postcss": "^8.4.35",
-    "sass": "^1.71.1",
-    "tailwindcss": "^3.4.1",
     "vite": "^5.1.4"
-  },
-  "description": "This template provides a minimal setup to get React working in Vite with HMR and some ESLint rules.",
-  "main": "quiz-data.js",
-  "repository": {
-    "type": "git",
-    "url": "My proj3"
-  },
-  "author": "",
-  "license": "ISC"
+  }
 }
